fixed spacing on main and user pages

--- a/client/src/mainpage.scss
+++ b/client/src/mainpage.scss
@@ -222,6 +222,7 @@
 
   .humor-section {
     flex: 2;
+    padding-bottom: 5rem;
   }
 
   div.name-locale {
