--- a/client/src/splash.scss
+++ b/client/src/splash.scss
@@ -8,7 +8,7 @@
 }
 
 .splash-main {
-  margin: 1rem 3rem 7rem 3rem;
+  margin: 1rem 3rem 11rem 3rem;
   background-color: $primary-black;
   padding: 2rem 0;
   display: flex;
